mudanças no sobre nós

--- a/sobrenos.html
+++ b/sobrenos.html
@@ -50,25 +50,41 @@
                     <div class="texto">
                         <div class="conteudos">
                             <div class="h1-quemsomos">
-                                <h1 style="color: white; font-size: 23px">Bem-vindo a Techflix a sua fonte 
-                                    definitiva de inovação
-                                    tecnológica e entretenimento digital!<br><br>Com a Techflix sua
-                                    diversão e entretenimento é garantida
+                                <center>
+                                    <h2 style="color: #00ff88; position: relative; top: 25px;">Quem somos:</h2>
+                                </center>
+                                <h1 style="color: white; font-size: 25px; text-align: center;">Na Techflix, a nossa
+                                    paixão pela tecnologia se funde com a magia do entretenimento, criando uma
+                                    experiência única para os aficionados por tecnologia e entusiastas de séries e
+                                    filmes. Somos um portal para um mundo de narrativas envolventes e histórias que
+                                    exploram o vasto universo da tecnologia da informação.
                                 </h1>
-                                
                             </div>
-                            <ul style="color: white; font-size: 30px;">
-                                <li>Filmes lançados recentemente</li>
-                                <li>Séries novas</li>
-                                <li>Conhecimento sobre tecnologia</li>
-                            </ul>
-                            <h2 style="color: white; font-size: 30px;"><strong>Techflix</strong> é mais do que uma
-                                plataforma de
-                                <strong>streaming;</strong>
-                                somos
-                                a sua porta de entrada para um mundo de inovação <br> tecnológica e entretenimento
-                                digital.
-                            </h2>
+                            <div class="diferenciais">
+                                <center>
+                                    <h2 style="color: #00ff88; position: relative; top: 25px;">Diferenciais:</h2>
+                                </center>
+                                <ul style="color: white; font-size: 25px;">
+                                    <li>Atendimento dedicado ao cliente</li>
+                                    <li>Séries e filmes em lançamento</li>
+                                    <li>Conteúdo Exclusivo</li>
+                                    <li>Atualizações Frequentes</li>
+                                    <li>Atualizações Frequentes</li>
+                                    <li>Atualizações Frequentes</li>
+                                </ul>
+                            </div>
+                            <div class="nossa-missao">
+                                <center>
+                                    <h2 style="color: #00ff88; position: relative; top: 25px;">Nossa missão:</h2>
+                                </center>
+                                <h2
+                                    style="color: white; font-size: 25px; position: relative; top: 25%; text-align: center;">
+                                    Nossa missão é simples: proporcionar a você, nosso estimado assinante, uma jornada
+                                    de entretenimento inigualável, repleta de descobertas fascinantes sobre o mundo da
+                                    TI. Queremos inspirar sua imaginação, estimular sua curiosidade e proporcionar-lhe
+                                    uma compreensão mais profunda de como a tecnologia molda o nosso presente e futuro.
+                                </h2>
+                            </div>
                         </div>
                     </div>
                 </figure>
