mudanças na pasta video

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <td class="poster-matrix"> <!-- Filme "Matrix" -->
                             <!-- Vídeo incorporado para "Matrix Resurrections" -->
                             <ul class="video">
-                                <iframe width="420" height="240" src="./Vídeo/MATRIX 4 RESURRECTIONS Trailer Brasileiro Legendado (2021) (1).mp4" sandbox></iframe>
+                                <iframe width="420" height="240" src="./Video/MATRIX 4 RESURRECTIONS Trailer Brasileiro Legendado (2021) (1).mp4" sandbox></iframe>
                             </ul>
                         </td>
                         <td class="texto"><strong>Matrix Resurrections</strong>
@@ -107,7 +107,7 @@
                         <td class="poster-mrrobot"> <!-- Série "Mr Robot" -->
                             <!-- Vídeo incorporado para "Mr. Robot" -->
                             <ul class="video">
-                                <iframe width="420" height="240" src="./Vídeo/Mr  Robot  Trailer Oficial - Legendado [PT-BR].mp4" sandbox></iframe>
+                                <iframe width="420" height="240" src="./Video/Mr  Robot  Trailer Oficial - Legendado [PT-BR].mp4" sandbox></iframe>
                             </ul>
                         </td>
                         <td class="texto"><strong>Mr. Robot</strong>
@@ -121,7 +121,7 @@
                         <td class="poster-rede"> <!-- Filme "A Rede Social" -->
                             <!-- Vídeo incorporado para "A Rede Social" -->
                             <ul class="video">
-                                <iframe width="420" height="240" src="./Vídeo/Trailer Oficial Português - A REDE SOCIAL.mp4" sandbox></iframe>
+                                <iframe width="420" height="240" src="./Video/Trailer Oficial Português - A REDE SOCIAL.mp4" sandbox></iframe>
                             </ul>
                         </td>
                         <td class="texto"><strong>A Rede Social</strong>
@@ -135,7 +135,7 @@
                         <td class="poster-imitacao"> <!-- Filme "O Jogo da Imitação" -->
                             <!-- Vídeo incorporado para "O Jogo da Imitação" -->
                             <ul class="video">
-                                <iframe width="420" height="240" src="./Vídeo/O Jogo da Imitação Trailer Oficial Legendado (2015) - Benedict Cumberbatch HD.mp4" sandbox></iframe>
+                                <iframe width="420" height="240" src="./Video/O Jogo da Imitação Trailer Oficial Legendado (2015) - Benedict Cumberbatch HD.mp4" sandbox></iframe>
                             </ul>
                         </td>
                         <td class="texto"><strong>O Jogo da Imitação</strong>
