--- a/pag-planos.html
+++ b/pag-planos.html
@@ -42,7 +42,7 @@
     </header>
     <main>
         <!-- Seção de planos -->
-        <section class="secao4" id="sobre">
+        <section class="secao4">
             <div class="secao4-div">
                 <!-- Card 1 - Plano Básico -->
                 <div class="secao4-div-card">
