--- a/dados-compra3.html
+++ b/dados-compra3.html
@@ -16,7 +16,7 @@
                 <label for="busca"><img class="lupa-img" src="./Img/lupa2.png" alt="lupa" width="25px"></label>
                 <input id="busca" type="search" placeholder="Busque seu filme!"> <!-- Campo de pesquisa -->
             </div>
-            <a href="home.html" class="logo">
+            <a href="index.html" class="logo">
                 <img src="./Img/logo.png" width="250px" alt="Logo Techflix"><!-- Logo -->
             </a>
             <nav> <!-- Navegação -->
