alterações no css e html

--- a/cadastro.html
+++ b/cadastro.html
@@ -40,13 +40,13 @@
     </section>
     <main>
         <section> <!--Sessão login-->
-            <div class="login-principal"> <!--div criada para o login principal-->
+            <div class="cadastro-principal"> <!--div criada para o login principal-->
                 <div class="movimentar">
-                    <div class="left-login">
+                    <div class="left-cadastro">
                         <h1>Seu cadastro é um ingresso para uma jornada de conhecimento e entretenimento digital!</h1>
                     </div>
-                    <div class="right-login">
-                        <div class="card-login"> <!--card do login-->
+                    <div class="right-cadastro">
+                        <div class="card-cadastro"> <!--card do login-->
                             <h1>CADASTRE-SE AQUI</h1>
                             <div class="campodetexto">
                                 <label for="Nome">Usuário</label>
@@ -81,7 +81,7 @@
                                 </div>
                                 <p>Já tem uma conta? <a class="cor-entre" href="login.html">Entre</a></p>
                             </div>
-                            <button class="btn-login">Enviar</button>
+                            <button class="btn-cadastro">Enviar</button>
                         </div>
                     </div>
                 </div>
