atualização sobre nós

--- a/sobrenos.html
+++ b/sobrenos.html
@@ -53,7 +53,7 @@
                                 <center>
                                     <h2 style="color: #00ff88; position: relative; top: 25px;">Quem somos:</h2>
                                 </center>
-                                <h1 style="color: white; font-size: 25px; text-align: center;">Na Techflix, a nossa
+                                <h1 style="color: white; font-size: 25px; text-align: center; padding: 8px;">Na Techflix, a nossa
                                     paixão pela tecnologia se funde com a magia do entretenimento, criando uma
                                     experiência única para os aficionados por tecnologia e entusiastas de séries e
                                     filmes. Somos um portal para um mundo de narrativas envolventes e histórias que
@@ -78,7 +78,7 @@
                                     <h2 style="color: #00ff88; position: relative; top: 25px;">Nossa missão:</h2>
                                 </center>
                                 <h2
-                                    style="color: white; font-size: 25px; position: relative; top: 25%; text-align: center;">
+                                    style="color: white; font-size: 25px; position: relative; top: 66px; text-align: center; padding: 8px;">
                                     Nossa missão é simples: proporcionar a você, nosso estimado assinante, uma jornada
                                     de entretenimento inigualável, repleta de descobertas fascinantes sobre o mundo da
                                     TI. Queremos inspirar sua imaginação, estimular sua curiosidade e proporcionar-lhe
