--- a/cadastro.html
+++ b/cadastro.html
@@ -50,8 +50,7 @@
                             <h1>CADASTRE-SE AQUI</h1>
                             <div class="campodetexto">
                                 <label for="Nome">Usuário</label>
-                                <input type="text" name="usuario" placeholder="Digite seu usuário aqui" id="usuario"
-                                    required>
+                                <input type="text" name="usuario" placeholder="Digite seu usuário aqui" id="usuario" required>
                             </div>
                             <div class="campodetexto">
                                 <label for="email">Email</label>
