modificações feitas na pasta css e js

--- a/catalogo.html
+++ b/catalogo.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="./Assets/catalogo.css">
+  <link rel="stylesheet" type="text/css" href="./Assets/CSS/catalogo.css">
   <link rel="icon" href="./Img/logoNuvem.png">
   <title>Techflix - Cátalogo</title>
 </head>
@@ -106,7 +106,7 @@
   <footer>
     <h2>Todos os direitos reservados a techflix</h2>
   </footer>
-  <script src="./Assets/carrossel.js"></script>
+  <script src="./Assets/JS/carrossel.js"></script>
 </body>
 
 </html>
