--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Assets/login.css">
+    <link rel="stylesheet" href="./Assets/CSS/login.css">
     <link rel="icon" href="./Img/logoNuvem.png">
     <title>Techflix - Login</title>
 </head>
@@ -61,7 +61,7 @@
                 </div>
             </div>
         </div>
-        <script src="./Assets/main.js"></script>
+        <script src="./Assets/JS/main.js"></script>
     </main>
     <footer>
         <h2>Todos os direitos reservados a TechFlix</h2>
