--- a/sobrenos.html
+++ b/sobrenos.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Assets/sobrenos.css">
+    <link rel="stylesheet" href="./Assets/CSS/sobrenos.css">
     <link rel="icon" href="./Img/logoNuvem.png">
     <title>Techflix - Sobre nós</title>
 </head>
@@ -96,7 +96,7 @@
             <h2>Todos os direitos reservados a Techflix</h2>
         </footer>
     </main>
-    <script src="./Assets/slide.js"></script><!-- Inclua seus scripts aqui -->
+    <script src="./Assets/JS/slide.js"></script><!-- Inclua seus scripts aqui -->
 </body>
 
 </html>
