--- a/cadastro.html
+++ b/cadastro.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Assets/cadastro.css">
+    <link rel="stylesheet" href="./Assets/CSS/cadastro.css">
     <link rel="icon" href="./Img/logoNuvem.png">
     <title>Techflix - Cadastro</title>
 </head>
