--- a/feedback.html
+++ b/feedback.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8"> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <link rel="stylesheet" href="./Assets/feedback.css"> 
+    <link rel="stylesheet" href="./Assets/CSS/feedback.css"> 
     <link rel="icon" href="./Img/logoNuvem.png">
     <title>Techflix - Feedback</title> 
 </head>
@@ -67,7 +67,7 @@
                 </div>
             </form>
         </section>
-        <script src="./Assets/estrela.js"></script> 
+        <script src="./Assets/JS/estrela.js"></script> 
     </main>
     <footer>
         <h2>Todos os direitos reservados a TechFlix</h2>
