--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Assets/style.css"> 
+    <link rel="stylesheet" href="./Assets/CSS/style.css"> 
     <link rel="icon" href="./Img/logoNuvem.png"> 
     <title>Techflix</title> 
 </head>
