pastas criadas para todos os arquivos do código

--- a/HTML/dados-compra.html
+++ b/HTML/dados-compra.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Assets/CSS/dados-compra.css">
-    <link rel="icon" href="./Img/logoNuvem.png">
+    <link rel="stylesheet" href="../Assets/CSS/dados-compra.css">
+    <link rel="icon" href="../Img/logoNuvem.png">
     <title>Techflix - Dados para compra básico</title>
 </head>
 
@@ -13,11 +13,11 @@
     <section> <!-- Início da seção de navegação -->
         <header>
             <div><!-- Barra de pesquisa -->
-                <label for="busca"><img class="lupa-img" src="./Img/lupa2.png" alt="lupa" width="25px"></label>
+                <label for="busca"><img class="lupa-img" src="../Img/lupa2.png" alt="lupa" width="25px"></label>
                 <input id="busca" type="search" placeholder="Busque seu filme!"> <!-- Campo de pesquisa -->
             </div>
             <a href="index.html" class="logo">
-                <img src="./Img/logo.png" width="250px" alt="Logo Techflix"><!-- Logo -->
+                <img src="../Img/logo.png" width="250px" alt="Logo Techflix"><!-- Logo -->
             </a>
             <nav> <!-- Navegação -->
                 <div class="links">
