--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Assets/CSS/style.css"> 
-    <link rel="icon" href="./Img/logoNuvem.png"> 
+    <link rel="stylesheet" href="../Assets/CSS/style.css"> 
+    <link rel="icon" href="../Img/logoNuvem.png"> 
     <title>Techflix</title> 
 </head>
 
@@ -13,11 +13,11 @@
     <section> <!-- Sessão de navegação -->
         <header>
             <div> <!-- Barra de pesquisa -->
-                <label for="busca"><img class="lupa-img" src="./Img/lupa2.png" alt="lupa" width="25px"></label>
+                <label for="busca"><img class="lupa-img" src="../Img/lupa2.png" alt="lupa" width="25px"></label>
                 <input id="busca" type="search" placeholder="Busque seu filme!">
             </div>
             <a href="index.html" class="logo"> <!-- Link para a página inicial -->
-                <img src="./Img/logo.png" width="250px"> <!-- Logo -->
+                <img src="../Img/logo.png" width="250px"> <!-- Logo -->
             </a>
             <nav> <!-- Barra de navegação -->
                 <div class="links">
@@ -49,19 +49,19 @@
                     <input type="radio" name="slide" id="slide4">
 
                     <div class="slide s1">
-                        <img src="./Img/mr robot 2.jpg" alt="mr-robot"> <!-- Imagem do slide 1 -->
+                        <img src="../Img/mr robot 2.jpg" alt="Mr-robot"> <!-- Imagem do slide 1 -->
                     </div>
 
                     <div class="slide">
-                        <img src="./Img/A rede social.jpg" alt="a rede social"> <!-- Imagem do slide 2 -->
+                        <img src="../Img/A rede social.jpg" alt="A rede social"> <!-- Imagem do slide 2 -->
                     </div>
 
                     <div class="slide">
-                        <img src="./Img/matrix 3.jpg" alt="teste"> <!-- Imagem do slide 3 -->
+                        <img src="../Img/matrix 3.jpg" alt="Matrix3"> <!-- Imagem do slide 3 -->
                     </div>
 
                     <div class="slide">
-                        <img src="./Img/jogo da imitação 2.jpg" alt="teste"> <!-- Imagem do slide 4 -->
+                        <img src="../Img/jogo da imitação 2.jpg" alt="Jogo da imitação"> <!-- Imagem do slide 4 -->
                     </div>
                 </div>
 
@@ -92,7 +92,7 @@
                         <td class="poster-matrix"> <!-- Filme "Matrix" -->
                             <!-- Vídeo incorporado para "Matrix Resurrections" -->
                             <ul class="video">
-                                <iframe width="420" height="240" src="./Video/MATRIX 4 RESURRECTIONS Trailer Brasileiro Legendado (2021) (1).mp4" sandbox></iframe>
+                                <iframe width="420" height="240" src="../Video/MATRIX 4 RESURRECTIONS Trailer Brasileiro Legendado (2021) (1).mp4" sandbox></iframe>
                             </ul>
                         </td>
                         <td class="texto"><strong>Matrix Resurrections</strong>
@@ -107,7 +107,7 @@
                         <td class="poster-mrrobot"> <!-- Série "Mr Robot" -->
                             <!-- Vídeo incorporado para "Mr. Robot" -->
                             <ul class="video">
-                                <iframe width="420" height="240" src="./Video/Mr  Robot  Trailer Oficial - Legendado [PT-BR].mp4" sandbox></iframe>
+                                <iframe width="420" height="240" src="../Video/Mr  Robot  Trailer Oficial - Legendado [PT-BR].mp4" sandbox></iframe>
                             </ul>
                         </td>
                         <td class="texto"><strong>Mr. Robot</strong>
@@ -121,7 +121,7 @@
                         <td class="poster-rede"> <!-- Filme "A Rede Social" -->
                             <!-- Vídeo incorporado para "A Rede Social" -->
                             <ul class="video">
-                                <iframe width="420" height="240" src="./Video/Trailer Oficial Português - A REDE SOCIAL.mp4" sandbox></iframe>
+                                <iframe width="420" height="240" src="../Video/Trailer Oficial Português - A REDE SOCIAL.mp4" sandbox></iframe>
                             </ul>
                         </td>
                         <td class="texto"><strong>A Rede Social</strong>
@@ -135,7 +135,7 @@
                         <td class="poster-imitacao"> <!-- Filme "O Jogo da Imitação" -->
                             <!-- Vídeo incorporado para "O Jogo da Imitação" -->
                             <ul class="video">
-                                <iframe width="420" height="240" src="./Video/O Jogo da Imitação Trailer Oficial Legendado (2015) - Benedict Cumberbatch HD.mp4" sandbox></iframe>
+                                <iframe width="420" height="240" src="../Video/O Jogo da Imitação Trailer Oficial Legendado (2015) - Benedict Cumberbatch HD.mp4" sandbox></iframe>
                             </ul>
                         </td>
                         <td class="texto"><strong>O Jogo da Imitação</strong>
