--- a/HTML/login.html
+++ b/HTML/login.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Assets/CSS/login.css">
-    <link rel="icon" href="./Img/logoNuvem.png">
+    <link rel="stylesheet" href="../Assets/CSS/login.css">
+    <link rel="icon" href="../Img/logoNuvem.png">
     <title>Techflix - Login</title>
 </head>
 
@@ -13,11 +13,11 @@
     <section> <!--Sessão nav-->
         <header>
             <div><!--barra de pesquisa-->
-                <label for="busca"><img class="lupa-img" src="./Img/lupa2.png" alt="lupa" width="25px"></label>
+                <label for="busca"><img class="lupa-img" src="../Img/lupa2.png" alt="lupa" width="25px"></label>
                 <input id="busca" type="search" placeholder="Busque seu filme!">
             </div>
             <a href="index.html" class="logo">
-                <img src="./Img/logo.png" width="250px"><!--logo-->
+                <img src="../Img/logo.png" width="250px"><!--logo-->
             </a>
             <nav> <!--Sessão nav-->
                 <div class="links">
@@ -42,7 +42,7 @@
         <div class="login-principal"> <!--div criada para o login principal-->
             <div class="left-login">
                 <h1>Faça login e entre em uma jornada de conhecimento tecnológico!</h1>
-                <img src="./Img/animação.svg" class="left-login-image" alt="animação">
+                <img src="../Img/animação.svg" class="left-login-image" alt="animação">
             </div>
             <div class="right-login">
                 <div class="card-login"> <!--card do login-->
@@ -61,7 +61,7 @@
                 </div>
             </div>
         </div>
-        <script src="./Assets/JS/main.js"></script>
+        <script src="../Assets/JS/main.js"></script>
     </main>
     <footer>
         <h2>Todos os direitos reservados a TechFlix</h2>
