--- a/HTML/sobrenos.html
+++ b/HTML/sobrenos.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Assets/CSS/sobrenos.css">
-    <link rel="icon" href="./Img/logoNuvem.png">
+    <link rel="stylesheet" href="../Assets/CSS/sobrenos.css">
+    <link rel="icon" href="../Img/logoNuvem.png">
     <title>Techflix - Sobre nós</title>
 </head>
 
@@ -14,11 +14,11 @@
         <!-- Cabeçalho da Página -->
         <header>
             <div><!-- Barra de pesquisa -->
-                <label for="busca"><img class="lupa-img" src="./Img/lupa2.png" alt="lupa" width="25px"></label>
+                <label for="busca"><img class="lupa-img" src="../Img/lupa2.png" alt="lupa" width="25px"></label>
                 <input id="busca" type="search" placeholder="Busque seu filme!">
             </div>
             <a href="index.html" class="logo">
-                <img src="./Img/logo.png" width="250px" alt="Logo da Techflix"><!-- Logo -->
+                <img src="../Img/logo.png" width="250px" alt="Logo da Techflix"><!-- Logo -->
             </a>
             <nav> <!-- Menu de Navegação -->
                 <div class="links">
@@ -44,9 +44,9 @@
             <!-- Banner Principal -->
             <figure id="container">
                 <figure class="banner">
-                    <img src="./Img/Matrix.jpg" alt="Imagem 1" class="img-figure">
-                    <img src="./Img/jogo da imitação.png" alt="Imagem 2" class="img-figure">
-                    <img src="./Img/mrrobot.png" alt="Imagem 3" class="img-figure">
+                    <img src="../Img/Matrix.jpg" alt="Imagem 1" class="img-figure">
+                    <img src="../Img/jogo da imitação.png" alt="Imagem 2" class="img-figure">
+                    <img src="../Img/mrrobot.png" alt="Imagem 3" class="img-figure">
                     <div class="texto">
                         <div class="conteudos">
                             <div class="h1-quemsomos">
@@ -96,7 +96,7 @@
             <h2>Todos os direitos reservados a Techflix</h2>
         </footer>
     </main>
-    <script src="./Assets/JS/slide.js"></script><!-- Inclua seus scripts aqui -->
+    <script src="../Assets/JS/slide.js"></script><!-- Inclua seus scripts aqui -->
 </body>
 
 </html>
