--- a/HTML/cadastro.html
+++ b/HTML/cadastro.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Assets/CSS/cadastro.css">
-    <link rel="icon" href="./Img/logoNuvem.png">
+    <link rel="stylesheet" href="../Assets/CSS/cadastro.css">
+    <link rel="icon" href="../Img/logoNuvem.png">
     <title>Techflix - Cadastro</title>
 </head>
 
@@ -13,11 +13,11 @@
     <section> <!--Sessão nav-->
         <header>
             <div><!--barra de pesquisa-->
-                <label for="busca"><img class="lupa-img" src="./Img/lupa2.png" alt="lupa" width="25px"></label>
+                <label for="busca"><img class="lupa-img" src="../Img/lupa2.png" alt="lupa" width="25px"></label>
                 <input id="busca" type="search" placeholder="Busque seu filme!">
             </div>
             <a href="index.html" class="logo">
-                <img src="./Img/logo.png" width="250px"><!--logo-->
+                <img src="../Img/logo.png" width="250px"><!--logo-->
             </a>
             <nav> <!--Sessão nav-->
                 <div class="links">
