--- a/HTML/pag-planos.html
+++ b/HTML/pag-planos.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Assets/CSS/pag-planos.css">
-    <link rel="icon" href="./Img/logoNuvem.png">
+    <link rel="stylesheet" href="../Assets/CSS/pag-planos.css">
+    <link rel="icon" href="../Img/logoNuvem.png">
     <title>Techflix - Planos</title>
 </head>
 
@@ -14,12 +14,12 @@
     <header>
         <div>
             <!-- Barra de pesquisa -->
-            <label for="busca"><img class="lupa-img" src="./Img/lupa2.png" alt="lupa" width="25px"></label>
+            <label for="busca"><img class="lupa-img" src="../Img/lupa2.png" alt="lupa" width="25px"></label>
             <input id="busca" type="search" placeholder="Busque seu filme!">
         </div>
         <a href="index.html" class="logo">
             <!-- Logo -->
-            <img src="./Img/logo.png" width="250px" alt="logo">
+            <img src="../Img/logo.png" width="250px" alt="logo">
         </a>
         <nav>
             <div class="links">
