modificações de comentário

--- a/HTML/catalogo.html
+++ b/HTML/catalogo.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
- <!-- Sessão de navegação -->
+ <!-- Seção de navegação -->
     <header>
         <div> <!-- Barra de pesquisa -->
             <label for="busca"><img class="lupa-img" src="../Img/lupa2.png" alt="lupa" width="25px"></label>
