--- a/HTML/feedback.html
+++ b/HTML/feedback.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <section> <!-- Sessão de navegação -->
+    <section> <!-- Seção de navegação -->
         <header>
             <div> <!-- Barra de pesquisa -->
                 <label for="busca"><img class="lupa-img" src="../Img/lupa2.png" alt="lupa" width="25px"></label>
