--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <section> <!-- Sessão de navegação -->
+    <section> <!-- Seção de navegação -->
         <header>
             <div> <!-- Barra de pesquisa -->
                 <label for="busca"><img class="lupa-img" src="../Img/lupa2.png" alt="lupa" width="25px"></label>
@@ -39,7 +39,7 @@
         </header>
     </section>
     <main>
-        <section> <!-- Sessão de banner -->
+        <section> <!-- Seção de banner -->
             <div class="conteudo">
                 <div class="slides">
                     <!-- Slides do banner -->
@@ -80,7 +80,7 @@
                 felizes que vocês estejam aqui!</h2>
         </section>
 
-        <section> <!-- Sessão de tabela de filmes -->
+        <section> <!-- Seção de tabela de filmes -->
             <table> <!-- Tabela de filmes -->
                 <thead>
                     <tr id="descricoes-tabela"> <!-- Descrição dos filmes -->
