--- a/HTML/login.html
+++ b/HTML/login.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <section> <!--Sessão nav-->
+    <section> <!--Seção nav-->
         <header>
             <div><!--barra de pesquisa-->
                 <label for="busca"><img class="lupa-img" src="../Img/lupa2.png" alt="lupa" width="25px"></label>
@@ -19,7 +19,7 @@
             <a href="index.html" class="logo">
                 <img src="../Img/logo.png" width="250px"><!--logo-->
             </a>
-            <nav> <!--Sessão nav-->
+            <nav> <!--Seção nav-->
                 <div class="links">
                     <ul class="nav-itens">
                         <li><a href="sobrenos.html">Sobre</a></li>
