--- a/HTML/cadastro.html
+++ b/HTML/cadastro.html
@@ -10,16 +10,16 @@
 </head>
 
 <body>
-    <section> <!--Sessão nav-->
+    <section> <!--Seção nav-->
         <header>
-            <div><!--barra de pesquisa-->
+            <div><!--Barra de pesquisa-->
                 <label for="busca"><img class="lupa-img" src="../Img/lupa2.png" alt="lupa" width="25px"></label>
                 <input id="busca" type="search" placeholder="Busque seu filme!">
             </div>
             <a href="index.html" class="logo">
-                <img src="../Img/logo.png" width="250px"><!--logo-->
+                <img src="../Img/logo.png" width="250px"><!--Logo-->
             </a>
-            <nav> <!--Sessão nav-->
+            <nav> <!--Seção nav-->
                 <div class="links">
                     <ul class="nav-itens">
                         <li><a href="sobrenos.html">Sobre</a></li>
@@ -27,7 +27,7 @@
                         <li><a href="catalogo.html">Catálogo</a></li>
                     </ul>
                 </div>
-                <div class="btn"><!--botoes de login e cadastro-->
+                <div class="btn"><!--Botões de login e cadastro-->
                     <a href="login.html">
                         <button class="login">LOGIN</button>
                     </a>
@@ -39,14 +39,14 @@
         </header>
     </section>
     <main>
-        <section> <!--Sessão login-->
-            <div class="cadastro-principal"> <!--div criada para o login principal-->
+        <section> <!--Seção login-->
+            <div class="cadastro-principal"> <!--Div criada para o login principal-->
                 <div class="movimentar">
                     <div class="left-cadastro">
                         <h1>Seu cadastro é um ingresso para uma jornada de conhecimento e entretenimento digital!</h1>
                     </div>
                     <div class="right-cadastro">
-                        <div class="card-cadastro"> <!--card do login-->
+                        <div class="card-cadastro"> <!--Card do login-->
                             <h1>CADASTRE-SE AQUI</h1>
                             <div class="campodetexto">
                                 <label for="Nome">Usuário</label>
