--- a/HTML/sobrenos.html
+++ b/HTML/sobrenos.html
@@ -96,7 +96,7 @@
             <h2>Todos os direitos reservados a Techflix</h2>
         </footer>
     </main>
-    <script src="../Assets/JS/slide.js"></script><!-- Inclua seus scripts aqui -->
+    <script src="../Assets/JS/slide.js"></script>
 </body>
 
 </html>
