--- a/HTML/catalogo.html
+++ b/HTML/catalogo.html
@@ -10,34 +10,34 @@
 </head>
 
 <body>
- <!-- Seção de navegação -->
+  <section> <!-- Seção de navegação -->
     <header>
-        <div> <!-- Barra de pesquisa -->
-            <label for="busca"><img class="lupa-img" src="../Img/lupa2.png" alt="lupa" width="25px"></label>
-            <input id="busca" type="search" placeholder="Busque seu filme!">
+      <div> <!-- Barra de pesquisa -->
+        <label for="busca"><img class="lupa-img" src="../Img/lupa2.png" alt="lupa" width="25px"></label>
+        <input id="busca" type="search" placeholder="Busque seu filme!">
+      </div>
+      <a href="index.html" class="logo"> <!-- Link para a página inicial -->
+        <img src="../Img/logo.png" width="250px"> <!-- Logo -->
+      </a>
+      <nav> <!-- Barra de navegação -->
+        <div class="links">
+          <ul class="nav-itens">
+            <li><a href="sobrenos.html">Sobre</a></li>
+            <li><a href="pag-planos.html">Planos</a></li>
+            <li><a href="catalogo.html">Catálogo</a></li>
+          </ul>
         </div>
-        <a href="index.html" class="logo"> <!-- Link para a página inicial -->
-            <img src="../Img/logo.png" width="250px"> <!-- Logo -->
-        </a>
-        <nav> <!-- Barra de navegação -->
-            <div class="links">
-                <ul class="nav-itens">
-                    <li><a href="sobrenos.html">Sobre</a></li>
-                    <li><a href="pag-planos.html">Planos</a></li> 
-                    <li><a href="catalogo.html">Catálogo</a></li> 
-                </ul>
-            </div>
-            <div class="btn"> <!-- Botões de login e cadastro -->
-                <a href="login.html">
-                    <button class="login">LOGIN</button> <!-- Botão "LOGIN" -->
-                </a>
-                <a href="cadastro.html">
-                    <button class="cadastro">CADASTRO</button> <!-- Botão "CADASTRO" -->
-                </a>
-            </div>
-        </nav>
+        <div class="btn"> <!-- Botões de login e cadastro -->
+          <a href="login.html">
+            <button class="login">LOGIN</button> <!-- Botão "LOGIN" -->
+          </a>
+          <a href="cadastro.html">
+            <button class="cadastro">CADASTRO</button> <!-- Botão "CADASTRO" -->
+          </a>
+        </div>
+      </nav>
     </header>
-</section>
+  </section>
   <main>
     <section id="banner"><!--Apresentação do conteúdo-->
       <div class="texto_banner">
