--- a/HTML/login.html
+++ b/HTML/login.html
@@ -10,29 +10,29 @@
 </head>
 
 <body>
-    <section> <!--Seção nav-->
+    <section> <!-- Seção de navegação -->
         <header>
-            <div><!--barra de pesquisa-->
+            <div> <!-- Barra de pesquisa -->
                 <label for="busca"><img class="lupa-img" src="../Img/lupa2.png" alt="lupa" width="25px"></label>
                 <input id="busca" type="search" placeholder="Busque seu filme!">
             </div>
-            <a href="index.html" class="logo">
-                <img src="../Img/logo.png" width="250px"><!--logo-->
+            <a href="index.html" class="logo"> <!-- Link para a página inicial -->
+                <img src="../Img/logo.png" width="250px"> <!-- Logo -->
             </a>
-            <nav> <!--Seção nav-->
+            <nav> <!-- Barra de navegação -->
                 <div class="links">
                     <ul class="nav-itens">
                         <li><a href="sobrenos.html">Sobre</a></li>
-                        <li><a href="pag-planos.html">Planos</a></li>
-                        <li><a href="catalogo.html">Catálogo</a></li>
+                        <li><a href="pag-planos.html">Planos</a></li> 
+                        <li><a href="catalogo.html">Catálogo</a></li> 
                     </ul>
                 </div>
-                <div class="btn"><!--botoes de login e cadastro-->
+                <div class="btn"> <!-- Botões de login e cadastro -->
                     <a href="login.html">
-                        <button class="login">LOGIN</button>
+                        <button class="login">LOGIN</button> <!-- Botão "LOGIN" -->
                     </a>
                     <a href="cadastro.html">
-                        <button class="cadastro">CADASTRO</button>
+                        <button class="cadastro">CADASTRO</button> <!-- Botão "CADASTRO" -->
                     </a>
                 </div>
             </nav>
