alterações html e css

--- a/HTML/dados-compra.html
+++ b/HTML/dados-compra.html
@@ -16,7 +16,7 @@
                 <label for="busca"><img class="lupa-img" src="../Img/lupa2.png" alt="lupa" width="25px"></label>
                 <input id="busca" type="search" placeholder="Busque seu filme!">
             </div>
-            <a href="index.html" class="logo"> <!-- Link para a página inicial -->
+            <a href="../index.html" class="logo"> <!-- Link para a página inicial -->
                 <img src="../Img/logo.png" width="250px"> <!-- Logo -->
             </a>
             <nav> <!-- Barra de navegação -->
@@ -42,9 +42,10 @@
     <main>
         <div class="login-principal"> <!-- Div criada para o login principal -->
             <div class="movimentar">
+                <h2 style="color: white; position: relative; top: 15px; font-size: 30px;">Plano básico</h2>
                 <div class="right-login">
                     <div class="card-login"> <!-- Card do login -->
-                        <h1>Informe os dados do seu cartão de crédito ou débito</h1>
+                        <h1 style="text-align: center;">Informe os dados do seu cartão de crédito ou débito.</h1>
                         <div class="campodetexto">
                             <label for="Nome">Nome</label>
                             <input type="text" name="usuario" placeholder="Nome" id="usuario" required> <!-- Campo de Nome -->
