--- a/HTML/login.html
+++ b/HTML/login.html
@@ -16,7 +16,7 @@
                 <label for="busca"><img class="lupa-img" src="../Img/lupa2.png" alt="lupa" width="25px"></label>
                 <input id="busca" type="search" placeholder="Busque seu filme!">
             </div>
-            <a href="index.html" class="logo"> <!-- Link para a página inicial -->
+            <a href="../index.html" class="logo"> <!-- Link para a página inicial -->
                 <img src="../Img/logo.png" width="250px"> <!-- Logo -->
             </a>
             <nav> <!-- Barra de navegação -->
