--- a/HTML/pag-planos.html
+++ b/HTML/pag-planos.html
@@ -16,7 +16,7 @@
                 <label for="busca"><img class="lupa-img" src="../Img/lupa2.png" alt="lupa" width="25px"></label>
                 <input id="busca" type="search" placeholder="Busque seu filme!">
             </div>
-            <a href="index.html" class="logo"> <!-- Link para a página inicial -->
+            <a href="../index.html" class="logo"> <!-- Link para a página inicial -->
                 <img src="../Img/logo.png" width="250px"> <!-- Logo -->
             </a>
             <nav> <!-- Barra de navegação -->
@@ -62,7 +62,7 @@
                             </li>
                         </ul>
                     </div>
-                    <a href="dados-compra3.html" class="botao-body">
+                    <a href="dados-compra.html" class="botao-body">
                         <div>
                             <h3>
                                 Assinar
@@ -91,7 +91,7 @@
                             </li>
                         </ul>
                     </div>
-                    <a href="dados-compra3.html" class="botao-body">
+                    <a href="dados-compra2.html" class="botao-body">
                         <div>
                             <h3>
                                 Assinar
