--- a/HTML/cadastro.html
+++ b/HTML/cadastro.html
@@ -16,7 +16,7 @@
                 <label for="busca"><img class="lupa-img" src="../Img/lupa2.png" alt="lupa" width="25px"></label>
                 <input id="busca" type="search" placeholder="Busque seu filme!">
             </div>
-            <a href="index.html" class="logo"> <!-- Link para a página inicial -->
+            <a href="../index.html" class="logo"> <!-- Link para a página inicial -->
                 <img src="../Img/logo.png" width="250px"> <!-- Logo -->
             </a>
             <nav> <!-- Barra de navegação -->
@@ -50,15 +50,15 @@
                             <h1>CADASTRE-SE AQUI</h1>
                             <div class="campodetexto">
                                 <label for="Nome">Usuário</label>
-                                <input type="text" name="usuario" placeholder="Digite seu usuário aqui" id="usuario" required>
+                                <input type="text" name="usuario" placeholder="Digite seu usuário aqui" id="cadastro_usuario" required>
                             </div>
                             <div class="campodetexto">
                                 <label for="email">Email</label>
-                                <input type="text" name="usuario" placeholder="Informe seu email" id="email" required>
+                                <input type="text" name="usuario" placeholder="Informe seu email" id="cadastro_email" required>
                             </div>
                             <div class="campodetexto">
                                 <label for="senha">Senha</label>
-                                <input type="password" name="usuario" placeholder="Crie uma senha" id="senha" required>
+                                <input type="password" name="usuario" placeholder="Crie uma senha" id="cadastro_senha" required>
                             </div>
                             <div class="campodetexto">
                                 <label for="data">Informe sua data de nascimento</label>
@@ -75,17 +75,17 @@
                             <div class="campodetexto">
                                 <div class="check">
                                     <input type="checkbox" name="usuario" id="checkbox" required>
-                                    <label for="checkbox">Li e aceito com os termos de uso e politica de
-                                        privacidade</label>
+                                    <label for="checkbox">Li e aceito com os termos de uso e politica de privacidade</label>
                                 </div>
                                 <p>Já tem uma conta? <a class="cor-entre" href="login.html">Entre</a></p>
                             </div>
-                            <button class="btn-cadastro">Enviar</button>
+                            <button class="btn-cadastro" onclick="cadastrar()">Enviar</button>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+        <script src="../Assets/JS/main.js"></script>
     </main>
     <footer>
         <h2>Todos os direitos reservados a TechFlix</h2>
