--- a/HTML/dados-compra3.html
+++ b/HTML/dados-compra3.html
@@ -16,7 +16,7 @@
                 <label for="busca"><img class="lupa-img" src="../Img/lupa2.png" alt="lupa" width="25px"></label>
                 <input id="busca" type="search" placeholder="Busque seu filme!">
             </div>
-            <a href="index.html" class="logo"> <!-- Link para a página inicial -->
+            <a href="../index.html" class="logo"> <!-- Link para a página inicial -->
                 <img src="../Img/logo.png" width="250px"> <!-- Logo -->
             </a>
             <nav> <!-- Barra de navegação -->
@@ -38,11 +38,11 @@
             </nav>
         </header>
     </section>
-
     <main>
         <section>
         <div class="login-principal"> <!-- Div criada para o login principal -->
             <div class="movimentar">
+                <h2 style="color: white; position: relative; top: 15px; font-size: 30px;">Plano premium</h2>
                 <div class="right-login">
                     <div class="card-login"> <!-- Card do login -->
                         <h1>Informe os dados do seu cartão de crédito ou débito</h1>
