--- a/HTML/sobrenos.html
+++ b/HTML/sobrenos.html
@@ -16,15 +16,15 @@
                 <label for="busca"><img class="lupa-img" src="../Img/lupa2.png" alt="lupa" width="25px"></label>
                 <input id="busca" type="search" placeholder="Busque seu filme!">
             </div>
-            <a href="index.html" class="logo"> <!-- Link para a página inicial -->
+            <a href="../index.html" class="logo"> <!-- Link para a página inicial -->
                 <img src="../Img/logo.png" width="250px"> <!-- Logo -->
             </a>
             <nav> <!-- Barra de navegação -->
                 <div class="links">
                     <ul class="nav-itens">
                         <li><a href="sobrenos.html">Sobre</a></li>
-                        <li><a href="pag-planos.html">Planos</a></li> 
-                        <li><a href="catalogo.html">Catálogo</a></li> 
+                        <li><a href="pag-planos.html">Planos</a></li>
+                        <li><a href="catalogo.html">Catálogo</a></li>
                     </ul>
                 </div>
                 <div class="btn"> <!-- Botões de login e cadastro -->
@@ -49,10 +49,10 @@
                     <div class="texto">
                         <div class="conteudos">
                             <div class="h1-quemsomos">
-                                <center>
-                                    <h2 style="color: #00ff88; position: relative; top: 25px;">Quem somos:</h2>
-                                </center>
-                                <h1 style="color: white; font-size: 25px; text-align: center; padding: 8px;">Na Techflix, a nossa
+                                <h2 style="color: #00ff88; position: relative; top: 25px; text-align: center;">Quem
+                                    somos:</h2>
+                                <h1 style="color: white; font-size: 25px; text-align: center; padding: 8px;">Na
+                                    Techflix, a nossa
                                     paixão pela tecnologia se funde com a magia do entretenimento, criando uma
                                     experiência única para os aficionados por tecnologia e entusiastas de séries e
                                     filmes. Somos um portal para um mundo de narrativas envolventes e histórias que
@@ -60,22 +60,17 @@
                                 </h1>
                             </div>
                             <div class="diferenciais">
-                                <center>
-                                    <h2 style="color: #00ff88; position: relative; top: 25px;">Diferenciais:</h2>
-                                </center>
+                                <h2 style="color: #00ff88; position: relative; top: 25px; text-align: center;">
+                                    Diferenciais:</h2>
                                 <ul style="color: white; font-size: 25px;">
                                     <li>Atendimento dedicado ao cliente</li>
                                     <li>Séries e filmes em lançamento</li>
                                     <li>Conteúdo Exclusivo</li>
                                     <li>Atualizações Frequentes</li>
-                                    <li>Atualizações Frequentes</li>
-                                    <li>Atualizações Frequentes</li>
                                 </ul>
                             </div>
                             <div class="nossa-missao">
-                                <center>
-                                    <h2 style="color: #00ff88; position: relative; top: 25px;">Nossa missão:</h2>
-                                </center>
+                                <h2 style="color: #00ff88; position: relative; top: 25px; text-align: center;">Nossa missão:</h2>
                                 <h2
                                     style="color: white; font-size: 25px; position: relative; top: 66px; text-align: center; padding: 8px;">
                                     Nossa missão é simples: proporcionar a você, nosso estimado assinante, uma jornada
